--- a/ClsMonitor/ClsMonitor.vcxproj
+++ b/ClsMonitor/ClsMonitor.vcxproj
@@ -145,20 +145,18 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CallbackRegisterException.h" />
     <ClInclude Include="ClsMonitor.h" />
     <ClInclude Include="ConsoleLogger.h" />
-    <ClInclude Include="CreateProcessCallbackRegister.h" />
     <ClInclude Include="EventSink.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WMIServiceConnectException.h" />
+    <ClInclude Include="WMIServiceProxy.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CallbackRegisterException.cpp" />
     <ClCompile Include="ClsMonitor.cpp" />
     <ClCompile Include="ConsoleLogger.cpp" />
-    <ClCompile Include="CreateProcessCallbackRegister.cpp" />
     <ClCompile Include="EventSink.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -166,6 +164,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WMIServiceConnectException.cpp" />
+    <ClCompile Include="WMIServiceProxy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ClsMonitor.rc" />
