--- a/ClsMonitor/ClsMonitor.vcxproj
+++ b/ClsMonitor/ClsMonitor.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Blacklist.h" />
     <ClInclude Include="ClsMonitor.h" />
     <ClInclude Include="ConsoleLogger.h" />
     <ClInclude Include="EventSink.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="WMIServiceProxy.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Blacklist.cpp" />
     <ClCompile Include="ClsMonitor.cpp" />
     <ClCompile Include="ConsoleLogger.cpp" />
     <ClCompile Include="EventSink.cpp" />
