--- a/ClsMonitor/ClsMonitor.vcxproj
+++ b/ClsMonitor/ClsMonitor.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="EventSink.h" />
     <ClInclude Include="QueueEvent.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SockThread.h" />
+    <ClInclude Include="SockThreadException.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WMIServiceConnectException.h" />
@@ -166,6 +168,8 @@
     <ClCompile Include="EventQueue.cpp" />
     <ClCompile Include="EventSink.cpp" />
     <ClCompile Include="QueueEvent.cpp" />
+    <ClCompile Include="SockThread.cpp" />
+    <ClCompile Include="SockThreadException.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
