--- a/ClsMServer/ClsMServer.csproj
+++ b/ClsMServer/ClsMServer.csproj
@@ -46,9 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AddForm.cs" />
     <Compile Include="AddForm.Designer.cs">
       <DependentUpon>AddForm.cs</DependentUpon>
     </Compile>
