Refactor server complete

--- a/ClsMServer/ClsMServer.csproj
+++ b/ClsMServer/ClsMServer.csproj
@@ -53,7 +53,8 @@
       <DependentUpon>AddForm.cs</DependentUpon>
     </Compile>
     <Compile Include="AsyncClient.cs" />
-    <Compile Include="BlackList.cs" />
+    <Compile Include="Blacklist.cs" />
+    <Compile Include="BlacklistControl.cs" />
     <Compile Include="CmdServer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
